# Work

Androidwork/: MyKey.jks
Androidwork/helloandroid/: build.gradle  settings.gradle
Androidwork/helloandroid/app/: build.gradle
Androidwork/helloandroid/app/release/: app-release.apk
Androidwork/helloandroid/app/src/main/: AndroidManifest.xml
Androidwork/helloandroid/app/src/main/java/com/example/helloandroid/: MyActivity.java
Androidwork/helloandroid/app/src/main/res/layout/: main.xml
Androidwork/helloandroid/app/src/main/res/values/: strings.xml
Androidwork/helloandroid/gradle/wrapper/: gradle-wrapper.properties
JavaWork/TestDemo/src/com/: MainJava.java  MyClass.java
JavaWork/TestDemo/testDemo/src/: MainJava.java  MainJavaTest.java
JavaWork/htmlWork/testDemo/: demo.html
c#_work/Test/Solution_test/: Solution_test.sln
c#_work/Test/Solution_test/Solution_test/: Program.cs  Solution_test.csproj
c#_work/Test/Solution_test/Solution_test/Properties/: AssemblyInfo.cs
c++_work/TestDemo/: CMakeLists.txt  main.cpp
c++_work/TestDemo/inc/: TestDemo.h  headfile.h
c++_work/TestDemo/src/: TestDemo.cpp
c++_work/rkProj/: CMakeLists.txt  init.sh  main.cpp
c++_work/rkProj/inc/: GpioCtrl.h  Logger.h  TcpServer.h  headfile.h
c++_work/rkProj/src/: GpioCtrl.cpp  Logger.cpp  TcpServer.cpp
py_work/TestDemo/: TestDemo.py  main.py
py_work/TestDemo/test_file/: c_test_sheet.xlsx  mydata.bak  test.txt  test.xlsx  w_test_sheet.xlsx  work.txt
py_work/kivyDemo/pythonProject1/: main.py
qt_work/: code.txt
qt_work/c_qt/MyLog/: CMakeLists.txt  main.cpp
qt_work/c_qt/MyLog/Interface/: mainwindow.cpp  mainwindow.h
qt_work/c_qt/MyLog/MyLog/: Logger.cpp  Logger.h  LoggerTemplate.h
qt_work/c_qt/TakeFood/: CMakeLists.txt  food.cpp  food.h  main.cpp  mainwindow.cpp  mainwindow.h  sender.cpp  sender.h  version.rc
qt_work/c_qt/practice/: CMakeLists.txt  OpenGLWidget.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  openGlDemo.cpp  openGlDemo.h
qt_work/c_qt/untitled/: Untitled.ioc
qt_work/p_qt/caj2pdf-qt-0.1.5/include/: caj2pdf.hpp
qt_work/p_qt/first_work/: MainWindow.py  MainWindow.ui  Qml1.qml  main.py
st_work/FreeRTOSDemo/FreeRTOS/include/: FreeRTOS.h  FreeRTOSConfig.h  deprecated_definitions.h
st_work/FreeRTOSDemo/User/: gd32f10x_eval.c  gd32f10x_eval.h  gd32f10x_it.c  main.c
st_work/FreeRTOSDemo/project/: template.uvguix.Admin  template.uvguix.Administrator  template.uvguix.hjz  template.uvoptx  template.uvprojx
st_work/FreeRTOSDemo/project/Listings/: startup_gd32f10x_md.lst  template.map
st_work/FreeRTOSDemo/project/Objects/: croutine.crf  croutine.d  event_groups.crf  event_groups.d  gd32f10x_adc.crf  gd32f10x_adc.d  gd32f10x_bkp.crf  gd32f10x_bkp.d  gd32f10x_can.crf  gd32f10x_can.d  gd32f10x_crc.crf  gd32f10x_crc.d  gd32f10x_dac.crf  gd32f10x_dac.d  gd32f10x_dbg.crf  gd32f10x_dbg.d  gd32f10x_dma.crf  gd32f10x_dma.d  gd32f10x_enet.crf  gd32f10x_enet.d  gd32f10x_eval.crf  gd32f10x_eval.d  gd32f10x_exmc.crf  gd32f10x_exmc.d  gd32f10x_exti.crf  gd32f10x_exti.d  gd32f10x_fmc.crf  gd32f10x_fmc.d  gd32f10x_fwdgt.crf  gd32f10x_fwdgt.d  gd32f10x_gpio.crf  gd32f10x_gpio.d  gd32f10x_i2c.crf  gd32f10x_i2c.d  gd32f10x_it.crf  gd32f10x_it.d  gd32f10x_misc.crf  gd32f10x_misc.d  gd32f10x_pmu.crf  gd32f10x_pmu.d  (+40 more)
st_work/demo/User/: gd32f10x_eval.c  gd32f10x_eval.h  gd32f10x_it.c  main.c
st_work/demo/project/: template.uvguix.Administrator  template.uvoptx  template.uvprojx
st_work/demo/project/Listings/: startup_gd32f10x_md.lst  template.map
st_work/demo/project/Objects/: gd32f10x_adc.crf  gd32f10x_adc.d  gd32f10x_bkp.crf  gd32f10x_bkp.d  gd32f10x_can.crf  gd32f10x_can.d  gd32f10x_crc.crf  gd32f10x_crc.d  gd32f10x_dac.crf  gd32f10x_dac.d  gd32f10x_dbg.crf  gd32f10x_dbg.d  gd32f10x_dma.crf  gd32f10x_dma.d  gd32f10x_enet.crf  gd32f10x_enet.d  gd32f10x_eval.d  gd32f10x_exmc.crf  gd32f10x_exmc.d  gd32f10x_exti.crf  gd32f10x_exti.d  gd32f10x_fmc.crf  gd32f10x_fmc.d  gd32f10x_fwdgt.crf  gd32f10x_fwdgt.d  gd32f10x_gpio.crf  gd32f10x_gpio.d  gd32f10x_i2c.crf  gd32f10x_i2c.d  gd32f10x_it.crf  gd32f10x_it.d  gd32f10x_misc.crf  gd32f10x_misc.d  gd32f10x_pmu.crf  gd32f10x_pmu.d  gd32f10x_rcu.crf  gd32f10x_rcu.d  gd32f10x_rtc.crf  gd32f10x_rtc.d  gd32f10x_sdio.crf  (+22 more)
